--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
+							<a href="#" class="image"><img src="essai 10x10.png" alt="" /></a>
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Ceci est un test</h2>
 							<p>Un test d'un lien ici : <a href="http://html5up.net">HTML5 UP</a></p>
